--- a/.github/workflows/despliegue.yml
+++ b/.github/workflows/despliegue.yml
@@ -2,7 +2,7 @@ name: React App Deploy Github
 on: 
   push:
     branches:
-      -"main"
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
